[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

[workspace]
members = ["templates"]

[dependencies]
# rand = "0.8.5"

[dev-dependencies]
# clippy = "0.0.302"

[[bin]]
name = "main"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html